# allyourbase

./: .gitignore  .golangci.yml  .goreleaser.yaml  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  PRIORITIES.md  README.md  docker-entrypoint.sh  go.mod  go.sum  install.sh
_dev/: COVERAGE_MATRIX.md
_qa/: README.md
docs-site/: index.md
packaging/: README.md  packaging_test.go
scripts/: allowlist-oversized.txt  build-postgres.sh  check-coverage-matrix.sh  check-file-sizes.sh  check-playwright-executed.sh  docker-runtime-smoke.sh  launch-ec2-tests.sh  run-integration-tests-ec2.sh  run-integration-tests.sh  run-package-integration-tests.sh  run-with-ayb.sh
sdk/: package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
sdk_dart/: CHANGELOG.md  README.md  pubspec.yaml
sdk_go/: auth.go  auth_test.go  client.go  client_test.go  contract_test.go  doc.go  e2e_test.go  edge.go  edge_test.go  errors.go  go.mod  records.go  records_test.go  storage.go  storage_test.go  types.go
sdk_kotlin/: build.gradle.kts  settings.gradle.kts
sdk_python/: pyproject.toml
sdk_python/src/allyourbase/: __init__.py  auth.py  client.py  errors.py  realtime.py  records.py  storage.py  types.py
sdk_python/tests/: test_auth.py  test_auth_state.py  test_client.py  test_contract.py  test_e2e.py  test_errors.py  test_realtime.py  test_records.py  test_storage.py  test_types.py
sdk_react/: README.md  package.json  pnpm-lock.yaml  tsconfig.json
sdk_ssr/: README.md  package.json  pnpm-lock.yaml
sdk_swift/: Package.swift
tests/: test_install.sh  (+8 more)
(+2011 files in other folders)
